--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <p>added a newline in master</p>
 <p> new line added</p>
 <p>edited line in github</p>
-<p>hi sudheer and shashir </p>
+<p>hi sudheer and shashir😂😎😅🥰😍😎
+ </p>
 </body>
 </html>
 
